--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>service-consumer</module>
     <module>api-gateway</module>
     <module>service-dataetler</module>
+    <module>nacos-config</module>
   </modules>
 
   <properties>
